# hsr

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  TUTORIAL.md  plan.md
example-api/: Cargo.toml  build.rs  petstore.yaml
example-api/my-api/: Cargo.toml  build.rs
example-api/my-api/src/: lib.rs
example-api/src/: lib.rs  main.rs
examples/bench/: Cargo.toml  POST.lua  README.md  bench.yaml  build.rs
examples/bench/src/: main.rs
examples/petstore/: Cargo.toml  README.md  build.rs  petstore.yaml  test.sh
examples/petstore-expanded/: Cargo.toml  build.rs  petstore-expanded.yaml
examples/petstore-expanded/src/: lib.rs
examples/petstore/src/: lib.rs
examples/quickstart/: Cargo.toml  README.md  build.rs  quickstart.yaml  test.sh
examples/quickstart/src/: main.rs
examples/tutorial/: Cargo.toml  README.md  build.rs  spec.yaml
examples/tutorial/src/: lib.rs  main.rs
hsr/: Cargo.toml  README.md
hsr-codegen/: Cargo.toml  NOTE.md  README.md  ui-template.html
hsr-codegen/src/: lib.rs  route.rs  walk.rs
hsr-codegen/tests/: codegen.rs
hsr-runtime/: Cargo.toml
hsr-runtime/src/: lib.rs
hsr/src/: lib.rs
jota-codegen/: Cargo.toml
jota-codegen/src/: lib.rs
src/: lib.rs
test/: Cargo.toml  README.md  build.rs  test-spec.yaml
test/src/: lib.rs  main.rs
