[package]
name = "serverfull"
version = "0.1.0"
authors = ["jesskfulwood <jesskfulwood@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openapiv3 = "0.2.0"
derive_more = "0.15.0"
serde_yaml = "0.8.9"
failure = "0.1.5"
