[package]
name = "serverfull"
version = "0.1.0"
authors = ["jesskfulwood <jesskfulwood@gmail.com>"]
edition = "2018"

[dependencies]
openapiv3 = "0.2.0"
derive_more = "0.15.0"
serde_yaml = "0.8.9"
failure = "0.1.5"
quote = "0.6.12"
http = "0.1.17"
heck = "0.3.1"
regex = "1.1.7"
log = "0.4.6"
syn = "0.15.36"
proc-macro2 = "0.4.30"
