[package]
name = "example-api"
version = "0.1.0"
authors = ["jesskfulwood <jesskfulwood@gmail.com>"]
edition = "2018"

[build-dependencies]
hsr-codegen = { path = "../hsr-codegen" }

[dependencies]
actix-web = "1.0.3"
futures-preview = { version = "0.3.0-alpha.17", features = ["compat"] }
futures1 = { package = "futures", version = "0.1" }
