[package]
name = "example-api"
version = "0.1.0"
authors = ["jesskfulwood <jesskfulwood@gmail.com>"]
edition = "2018"

[build-dependencies]
hsr-codegen = { path = "../hsr-codegen" }

[dependencies]
hsr-runtime = { path = "../hsr-runtime" }
serde = { version = "1", features = ['derive'] }
regex = "1.1.9"
rand = "0.7.0"
