[package]
name = "example-api"
version = "0.1.0"
authors = ["jesskfulwood <jesskfulwood@gmail.com>"]
edition = "2018"

[build-dependencies]
hsr-codegen = { path = "../hsr-codegen" }

[dependencies]
hsr-runtime = { path = "../hsr-runtime" }
serde = { version = "1.0.98", features = ['derive'] }
regex = "1.2.0"
rand = "0.7.0"

[features]
rustfmt = ["hsr-codegen/rustfmt"]