[package]
name = "hsr-codegen"
version = "0.1.0"
authors = ["jesskfulwood <jesskfulwood@gmail.com>"]
edition = "2018"
description = "Build fast HTTP APIs fast, with Rust + OpenAPI"
repository = "https://github.com/jesskfullwood/hsr"
homepage = "https://github.com/jesskfullwood/hsr"
keywords = ["swagger", "openapi", "web", "REST", "actix-web"]
license = "MIT"
readme = "README.md"

[dependencies]
actix-http = "1.0.1"
derive_more = "0.99.2"
either = "1.5.3"
failure = "0.1.6"
heck = "0.3.1"
http = "0.2.0"
indexmap = "1.3.0"
log = "0.4.8"
openapiv3 = "0.3.0"
proc-macro2 = "1.0.7"
quote = "1.0.2"
regex = "1.3.3"
serde_json = "1.0.44"
serde_yaml = "0.8.11"
structopt = "0.3.7"
syn = "1.0.13"

rustfmt-nightly = { version = "1.4.11", optional = true }

[dev-dependencies]
diff = "0.1.12"
env_logger = "0.7.1"
tempdir = "0.3.7"
yansi = "0.5.0"

[features]
rustfmt = [ "rustfmt-nightly" ]
