[package]
name = "hsr-codegen"
version = "0.2.0"
authors = ["jesskfulwood <jesskfulwood@gmail.com>"]
edition = "2018"
description = "Build fast HTTP APIs fast, with Rust + OpenAPI"
repository = "https://github.com/jesskfullwood/hsr"
homepage = "https://github.com/jesskfullwood/hsr"
keywords = ["swagger", "openapi", "web", "REST", "actix-web"]
license = "MIT"
readme = "README.md"

[dependencies]
actix-http = "1.0.1"
derive_more = "0.99.5"
either = "1.5.3"
heck = "0.3.1"
http = "0.2.1"
indexmap = "1.3.2"
log = "0.4.8"
openapiv3 = "0.3.0"
proc-macro2 = "1.0.10"
quote = "1.0.3"
regex = "1.3.6"
serde_json = "1.0.51"
serde_yaml = "0.8.11"
structopt = "0.3.13"
syn = "1.0.17"
thiserror = "1.0.15"

rustfmt-nightly = { version = "1.4.13", optional = true }

[dev-dependencies]
diff = "0.1.12"
env_logger = "0.7.1"
tempdir = "0.3.7"
yansi = "0.5.0"

[features]
rustfmt = [ "rustfmt-nightly" ]
