[package]
name = "hsr-codegen"
version = "0.4.0"
authors = ["Alex Whitney <adwhit@fastmail.com>"]
edition = "2021"
description = "Build fast HTTP APIs fast, with Rust + OpenAPI"
repository = "https://github.com/adwhit/hsr"
homepage = "https://github.com/adwhit/hsr"
keywords = ["swagger", "openapi", "web", "REST", "actix-web"]
license = "MIT"
readme = "README.md"

[dependencies]
actix-http = "3.2.2"
derive_more = "0.99.17"
either = "1.8.0"
heck = "0.4.0"
http = "0.2.8"
indexmap = "1.9.1"
log = "0.4.17"
openapiv3 = "1.0.1"
proc-macro2 = "1.0.47"
quote = "1.0.21"
regex = "1.7.0"
serde_json = "1.0.87"
serde_yaml = "0.9.14"
structopt = "0.3.26"
syn = "1.0.103"
thiserror = "1.0.37"

rustfmt-wrapper = { version = "0.2.0", optional = true }

[dev-dependencies]
diff = "0.1.13"
env_logger = "0.9.3"
tempdir = "0.3.7"
yansi = "0.5.1"

[features]
pretty = [ "rustfmt-wrapper" ]
