[package]
name = "hsr-runtime"
version = "0.1.0"
authors = ["jesskfulwood <jesskfulwood@gmail.com>"]
edition = "2018"

[dependencies]
futures1 = { package = "futures", version = "0.1.27" }
futures-preview = { version = "0.3.0-alpha.16", features = ["compat"] }
hyper = "0.12.30"
path-tree = "0.1.8"
warp = "0.1.16"
serde = { version = "1.0.92", features = ["derive"] }
