[package]
name = "hsr-runtime"
version = "0.1.0"
authors = ["jesskfulwood <jesskfulwood@gmail.com>"]
edition = "2018"

[dependencies]
futures1 = { package = "futures", version = "0.1.27" }
futures3 = { package = "futures-preview", version = "0.3.0-alpha.17", features = ["compat"] }
serde = { version = "1.0.97", features = ["derive"] }
actix-web = "1.0.5"
actix-http = "0.2.7"
