[package]
name = "hsr"
version = "0.1.0"
authors = ["jesskfulwood <jesskfulwood@gmail.com>"]
edition = "2018"
description = "Build fast HTTP APIs fast, with Rust + OpenAPI"
repository = "https://github.com/jesskfullwood/hsr"
homepage = "https://github.com/jesskfullwood/hsr"
keywords = ["swagger", "openapi", "web", "REST", "actix-web"]
license = "MIT"
readme = "README.md"


[dependencies]
futures1 = { package = "futures", version = "0.1.27" }
futures3 = { package = "futures-preview", version = "0.3.0-alpha.17", features = ["compat"] }
futures3_core = { package = "futures-core-preview", version = "0.3.0-alpha.17" }
actix-web = "1.0.5"
actix-http = "0.2.8"
awc = "0.2.3"
actix-rt = "0.2.4"
url = "2.1.0"
serde_urlencoded = "0.6.1"
serde_derive = "1"
