[package]
name = "hsr"
version = "0.2.0"
authors = ["jesskfulwood <jesskfulwood@gmail.com>"]
edition = "2018"
description = "Build fast HTTP APIs fast, with Rust + OpenAPI"
repository = "https://github.com/jesskfullwood/hsr"
homepage = "https://github.com/jesskfullwood/hsr"
keywords = ["swagger", "openapi", "web", "REST", "actix-web"]
license = "MIT"
readme = "README.md"


[dependencies]
futures = { package = "futures", version = "0.3.1" }
actix-web = { version = "2.0.0", features = ["openssl"] }
actix-http = "1.0.1"
awc = "1.0.1"
actix-rt = "1.0.0"
url = "2.1.1"
serde_urlencoded = "0.6.1"
serde_derive = "1.0.104"
openssl = "0.10.26"
async-trait = "0.1.22"
