[package]
name = "hsr"
version = "0.3.0"
authors = ["Alex Whitney <adwhit@fastmail.com>"]
edition = "2018"
description = "Build fast HTTP APIs fast, with Rust + OpenAPI"
repository = "https://github.com/adwhit/hsr"
homepage = "https://github.com/adwhit/hsr"
keywords = ["swagger", "openapi", "web", "REST", "actix-web"]
license = "MIT"
readme = "../README.md"

[dependencies]
futures = "0.3.25"
actix-web = { version = "4.2.1", features = ["openssl"] }
actix-http = "3.2.2"
awc = "3.0.1"
actix-rt = "2.7.0"
url = "2.3.1"
serde_urlencoded = "0.7.1"
serde_derive = "1.0.147"
openssl = "0.10.42"
async-trait = "0.1.58"
derive_more = "0.99.17"
thiserror = "1.0.37"
serde_json = "1.0.87"
