[package]
name = "test"
version = "0.1.0"
authors = ["Alex Whitney <adwhit@fastmail.com>"]
edition = "2018"

[build-dependencies]
hsr-codegen = { path = "../hsr-codegen" }

[dependencies]
hsr = { path = "../hsr" }
serde = "1.0.106"
env_logger = "0.7.1"
actix-rt = "1.1.0"
serde_json = "1.0.51"

[features]
pretty = ["hsr-codegen/pretty"]
