[package]
name = "test"
version = "0.1.0"
authors = ["Alex Whitney <adwhit@fastmail.com>"]
edition = "2021"

[build-dependencies]
hsr-codegen = { path = "../hsr-codegen" }

[dependencies]
hsr = { path = "../hsr" }
serde = "1.0.147"
env_logger = "0.9.3"
actix-rt = "2.7.0"
serde_json = "1.0.87"

[features]
pretty = ["hsr-codegen/pretty"]
