[package]
name = "petstore-expanded"
version = "0.1.0"
authors = ["Alex Whitney <adwhit@fastmail.com>"]
edition = "2018"

[build-dependencies]
hsr-codegen = { path = "../../hsr-codegen" }

[dependencies]
hsr = { path = "../../hsr" }
serde = { version = "1.0.106", features = ['derive'] }
regex = "1.3.7"
rand = "0.7.3"
env_logger = "0.7.1"

[features]
pretty = ["hsr-codegen/pretty"]
