[package]
name = "petstore-expanded"
version = "0.1.0"
authors = ["Alex Whitney <adwhit@fastmail.com>"]
edition = "2021"

[build-dependencies]
hsr-codegen = { path = "../../hsr-codegen" }

[dependencies]
hsr = { path = "../../hsr" }
serde = { version = "1.0.147", features = ['derive'] }
regex = "1.7.0"
rand = "0.8.5"
env_logger = "0.9.3"

[features]
pretty = ["hsr-codegen/pretty"]
