[package]
name = "petstore"
version = "0.1.0"
authors = ["jesskfulwood <jesskfulwood@gmail.com>"]
edition = "2018"

[build-dependencies]
hsr-codegen = { path = "../../hsr-codegen" }

[[bin]]
name = "petstore-server"
path = "src/bin/server.rs"

[[bin]]
name = "petstore-client"
path = "src/bin/client.rs"

[dependencies]
env_logger = "0.6.2"
hsr = { path = "../../hsr" }
rand = "0.7.0"
regex = "1.2.1"
serde = "1"

[features]
rustfmt = ["hsr-codegen/rustfmt"]
