[package]
name = "petstore"
version = "0.0.0"
authors = ["jesskfulwood <jesskfulwood@gmail.com>"]
edition = "2018"

[build-dependencies]
# hsr-codegen = { path = "../../hsr-codegen" }
hsr-codegen = { path = "../../hsr-codegen" }

[[bin]]
name = "petstore-server"
path = "src/bin/server.rs"

[[bin]]
name = "petstore-client"
path = "src/bin/client.rs"

[dependencies]
env_logger = "0.7.1"
hsr = { path = "../../hsr" }
rand = "0.7.3"
regex = "1.3.3"
serde = "1.0.104"
actix-rt = "1.0.0"

[features]
rustfmt = ["hsr-codegen/rustfmt"]
