[package]
name = "petstore"
version = "0.0.0"
authors = ["Alex Whitney <adwhit@fastmail.com>"]
edition = "2018"

[build-dependencies]
# hsr-codegen = { path = "../../hsr-codegen" }
hsr-codegen = { path = "../../hsr-codegen" }

[[bin]]
name = "petstore-server"
path = "src/bin/server.rs"

[[bin]]
name = "petstore-client"
path = "src/bin/client.rs"

[dependencies]
env_logger = "0.9.3"
hsr = { path = "../../hsr" }
rand = "0.8.5"
regex = "1.7.0"
serde = "1.0.147"
actix-rt = "2.7.0"

[features]
pretty = ["hsr-codegen/pretty"]
