[package]
name = "quickstart"
version = "0.1.0"
authors = ["jesskfulwood <jesskfulwood@gmail.com>"]
edition = "2018"

[build-dependencies]
hsr-codegen = { path = "../../hsr-codegen" }

[dependencies]
hsr = { path = "../../hsr" }
serde = "1.0.104"
env_logger = "0.7.1"
actix-rt = "1.0.0"

[features]
rustfmt = ["hsr-codegen/rustfmt"]
