[package]
name = "quickstart"
version = "0.1.0"
authors = ["Alex Whitney <adwhit@fastmail.com>"]
edition = "2018"

[build-dependencies]
hsr-codegen = { path = "../../hsr-codegen" }

[dependencies]
hsr = { path = "../../hsr" }
serde = "1.0.106"
env_logger = "0.7.1"
actix-rt = "1.1.0"

[features]
rustfmt = ["hsr-codegen/rustfmt"]
