[package]
name = "tutorial"
version = "0.1.0"
authors = ["Alex Whitney <adwhit@fastmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hsr = { path = "../../hsr" }
serde = "1.0.147"
actix-rt = "2.7.0"

[build-dependencies]
hsr-codegen = { path = "../../hsr-codegen" }
